--- a/NUEVO ESTILO.css
+++ b/NUEVO ESTILO.css
@@ -1,12 +1,11 @@
 *{margin: 0.5; padding: 0; box-sizing: 0; }
 
-nav
-        {display: flex;
+nav     {display: flex;
         flex-direction: row;
         justify-content: space-between;
         margin: 2%;
         } 
-.menu{  list-style-type:none;
+.menu   {list-style-type:none;
         font-style: italic;
         }
 
@@ -37,20 +36,11 @@ ul ul li{display: block;}
 
 p{ color: black;}                
                
-.main   {display: grid;
-        grid-template-columns:repeat (4, 1fr);
-        grid-template-rows:repeat (4, 1fr); 
-        grid-template-areas:"ban ban ban ban" 
-                            "hockey hockey rugby rugby" 
-                            "sponsor sponsor sponsor sponsor"
-                            "footer footer footer footer";
-        grid-row-gap: 10px;
-        grid-column-gap:10px; 
-        background: linear-gradient(to top, white, #E78D1E);}
+.main   {display: grid; 
+        margin-left: 0%;
+        }
         
-section#ban{grid-area: ban;}
-section#hockey{ grid-area: hockey;
-        background-color: #E78D1E;
+#Deporte{background-color: #E78D1E;
         text-align: center;
         }
 h2{ font-size: 35px;
@@ -59,40 +49,33 @@ h2{ font-size: 35px;
     padding: 1rem;
     align-self: center;
     color: white;}
-h2:hover{
-        transform: scale(1.1 , 1.1);
-       }    
+h2:hover{transform: scale(1.1 , 1.1);
+        }   
 
-section#Rugby{
-            grid-area:rugby;
-            background-color: #E78D1E;
-            text-align: center;}
-section#sponsor{grid-area: sponsor;
-                background: #18254F;}
 #sponsor {
-         display: flex;
-         margin-left: 0rem;
          padding: 1rem;
-         flex-direction: column;}
+         flex-direction: column;
+        }
+#sponsor div{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                background-color: #18254F;
+                justify-content: center;
+                }
 #sponsor h2{
     width: 100%;}         
 
-footer{grid-area: footer;
-         background:linear-gradient(to top, #e78d, white);
-        text-align: center;}   
-#sponsor div{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        background-color: #18254F;
-        justify-content: center;
-        padding: 1%;}
+footer  { grid-area: footer;
+        background:linear-gradient(to top, #e78d, white);
+        text-align: center;
+        }   
+
 div img {
     width: 175px;
     height: 175px;}
 
-
-/*hockey CSS*/
+    /*hockey CSS*/
 .hock{  display: grid;
         grid-template-columns:repeat (2, 1fr);
         grid-template-rows:repeat (4, 1fr); 
@@ -127,37 +110,4 @@ div img {
     opacity: 1;
     border:solid 1px white}  
 
-@media screen and (max-width: 640px){
-    .main { 
-            background-color: aqua;
-            grid-template-columns:repeat (1fr);
-            grid-template-rows:repeat (5, 1fr); 
-            grid-template-areas:
-                "ban" 
-                "hockey " 
-                "rugby "
-                "sponsor"
-                "footer "
-        }  
-    #hockey{ grid-area: hockey;
-             text-align: center;
-            }
-    }
-
-@media screen and (max-width: 640px){
-        .hock { 
-                background-color: aqua;
-                grid-template-columns:repeat (1fr);
-                grid-template-rows:repeat (7, 1fr); 
-                grid-template-areas:
-                "resumen "
-                "resumen"
-                "fixture" 
-                "categorias"
-                "galeria"
-                "galeria"
-                 "pie";}
-
-.main   {
-        background: linear-gradient(to top, #18254F white);
-        }
+.row {background-color: #18254F;}        
