--- a/NUEVO ESTILO.css
+++ b/NUEVO ESTILO.css
@@ -4,6 +4,8 @@ nav     {display: flex;
         flex-direction: row;
         justify-content: space-between;
         margin: 2%;
+        background:linear-gradient(to top, white, #e78d1ebb);
+        text-align: center;
         } 
 .menu   {list-style-type:none;
         font-style: italic;
@@ -18,6 +20,10 @@ a:link, a:visited, a:active {
     text-decoration:none;
     color:#18254F;
     font-size: 1.5rem}
+
+.nav-item:hover:hover{ color:#E78D1E} 
+.btn{margin: 0%;
+                color: #E78D1E;} 
 
 a:hover{color: #E78D1E;
         text-decoration: overline;}  
@@ -40,8 +46,9 @@ p{ color: black;}
         margin-left: 0%;
         }
         
-#Deporte{background-color: #E78D1E;
+#Deporte{
         text-align: center;
+        background:linear-gradient(to top,white, #E78D1E);
         }
 h2{ font-size: 35px;
     text-align: center;
@@ -50,7 +57,7 @@ h2{ font-size: 35px;
     align-self: center;
     color: white;}
 h2:hover{transform: scale(1.1 , 1.1);
-        }   
+        }  
 
 #sponsor {
          padding: 1rem;
@@ -62,12 +69,16 @@ h2:hover{transform: scale(1.1 , 1.1);
                 flex-wrap: nowrap;
                 background-color: #18254F;
                 justify-content: center;
+                
                 }
+               
+
 #sponsor h2{
     width: 100%;}         
 
-footer  { grid-area: footer;
-        background:linear-gradient(to top, #e78d, white);
+footer  {grid-area: footer;
+        background: #E78D1E;
+        border: solid  whitesmoke;
         text-align: center;
         }   
 
@@ -111,3 +122,10 @@ div img {
     border:solid 1px white}  
 
 .row {background-color: #18254F;}        
+.canchas{
+        border: solid white;
+        background-color: white;}
+h3{ font-size: small;}
+#arriba{
+        font-size: small;
+}
